Pre Issue 3: Fixed button alignment in featured view. #3

--- a/css/layout.css
+++ b/css/layout.css
@@ -40,7 +40,7 @@
 
 @media only screen and (min-width: 426px) {
   .container {
-    width: 656px;
+    max-width: 768px;
     padding: 0 0.5rem;
     margin: 0 auto;
   }
@@ -52,7 +52,7 @@
 
 @media only screen and (min-width: 769px) {
   .container {
-    width: 768px;
+    width: 769px;
     margin: 0 auto;
   }
 
